--- a/BillTopicModeling YJ.ipynb
+++ b/BillTopicModeling YJ.ipynb
@@ -108,7 +108,7 @@
        "      <td>제21대 (2020~2024) 제381회</td>\n",
        "      <td>['제안이유 및 주요내용정부는 「노인복지법」,「장애인복지법」 등에 따라 65세 이상...</td>\n",
        "      <td>[]</td>\n",
-       "      <td>['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...</td>\n",
+       "      <td>['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -124,7 +124,7 @@
        "      <td>제21대 (2020~2024) 제381회</td>\n",
        "      <td>['제안이유정부는 「노인복지법」,「장애인복지법」 등에 따라 65세 이상 노인·장애인...</td>\n",
        "      <td>[]</td>\n",
-       "      <td>['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...</td>\n",
+       "      <td>['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -140,7 +140,7 @@
        "      <td>제21대 (2020~2024) 제381회</td>\n",
        "      <td>['제안이유최근 코로나19 바이러스의 확산에 따라 외출 자제 및 재택근무 권고, 학...</td>\n",
        "      <td>[]</td>\n",
-       "      <td>['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...</td>\n",
+       "      <td>['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -171,9 +171,9 @@
        "                                                 제안자  \n",
        "0  ['박재호(더불어민주당/朴在昊)', '김경협(더불어민주당/金炅俠)', '김정호(더불...  \n",
        "1  ['황운하(더불어민주당/黃雲夏)', '김경만(더불어민주당/金京萬)', '김경협(더불...  \n",
-       "2  ['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...  \n",
-       "3  ['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...  \n",
-       "4  ['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...  "
+       "2  ['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...  \n",
+       "3  ['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...  \n",
+       "4  ['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...  "
       ]
      },
      "execution_count": 2,
@@ -182,7 +182,7 @@
     }
    ],
    "source": [
-    "BillDf = pd.read_csv(\"./21대 국회 의안정보 new.csv\", encoding='utf-8-sig') #200824업데이트\n",
+    "BillDf = pd.read_csv(\"./21대 국회 의안정보 new.csv\", encoding='utf-8-sig') #200824업데이트\n",
     "BillDf.head()"
    ]
   },
@@ -361,7 +361,7 @@
        "      <td>제21대 (2020~2024) 제381회</td>\n",
        "      <td>정부는 「노인복지법」 「장애인복지법」 등에 따라 65세 이상 노인 장애인 등에 대하...</td>\n",
        "      <td>[]</td>\n",
-       "      <td>['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...</td>\n",
+       "      <td>['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -378,7 +378,7 @@
        "      <td>제21대 (2020~2024) 제381회</td>\n",
        "      <td>정부는 「노인복지법」 「장애인복지법」 등에 따라 65세 이상 노인 장애인 등에 대하...</td>\n",
        "      <td>[]</td>\n",
-       "      <td>['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...</td>\n",
+       "      <td>['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -395,7 +395,7 @@
        "      <td>제21대 (2020~2024) 제381회</td>\n",
        "      <td>최근 코로나19 바이러스의 확산에 따라 외출 자제 및 재택근무 권고  학교 개학 연...</td>\n",
        "      <td>[]</td>\n",
-       "      <td>['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...</td>\n",
+       "      <td>['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -526,9 +526,9 @@
        "                                                 제안자  \n",
        "0  ['박재호(더불어민주당/朴在昊)', '김경협(더불어민주당/金炅俠)', '김정호(더불...  \n",
        "1  ['황운하(더불어민주당/黃雲夏)', '김경만(더불어민주당/金京萬)', '김경협(더불...  \n",
-       "2  ['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...  \n",
-       "3  ['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...  \n",
-       "4  ['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...  \n",
+       "2  ['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...  \n",
+       "3  ['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...  \n",
+       "4  ['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...  \n",
        "5  ['박재호(더불어민주당/朴在昊)', '김수흥(더불어민주당/金洙興)', '김정호(더불...  \n",
        "6  ['박재호(더불어민주당/朴在昊)', '김경협(더불어민주당/金炅俠)', '김수흥(더불...  \n",
        "7  ['박재호(더불어민주당/朴在昊)', '김승남(더불어민주당/金承南)', '김윤덕(더불...  \n",
@@ -666,7 +666,7 @@
        "      <td>제21대 (2020~2024) 제381회</td>\n",
        "      <td>정부는 「노인복지법」 「장애인복지법」 등에 따라 65세 이상 노인 장애인 등에 대하...</td>\n",
        "      <td>[]</td>\n",
-       "      <td>['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...</td>\n",
+       "      <td>['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -683,7 +683,7 @@
        "      <td>제21대 (2020~2024) 제381회</td>\n",
        "      <td>정부는 「노인복지법」 「장애인복지법」 등에 따라 65세 이상 노인 장애인 등에 대하...</td>\n",
        "      <td>[]</td>\n",
-       "      <td>['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...</td>\n",
+       "      <td>['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -700,7 +700,7 @@
        "      <td>제21대 (2020~2024) 제381회</td>\n",
        "      <td>최근 코로나19 바이러스의 확산에 따라 외출 자제 및 재택근무 권고  학교 개학 연...</td>\n",
        "      <td>[]</td>\n",
-       "      <td>['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...</td>\n",
+       "      <td>['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -831,9 +831,9 @@
        "                                                 제안자  \n",
        "0  ['박재호(더불어민주당/朴在昊)', '김경협(더불어민주당/金炅俠)', '김정호(더불...  \n",
        "1  ['황운하(더불어민주당/黃雲夏)', '김경만(더불어민주당/金京萬)', '김경협(더불...  \n",
-       "2  ['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...  \n",
-       "3  ['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...  \n",
-       "4  ['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...  \n",
+       "2  ['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...  \n",
+       "3  ['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...  \n",
+       "4  ['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...  \n",
        "5  ['박재호(더불어민주당/朴在昊)', '김수흥(더불어민주당/金洙興)', '김정호(더불...  \n",
        "6  ['박재호(더불어민주당/朴在昊)', '김경협(더불어민주당/金炅俠)', '김수흥(더불...  \n",
        "7  ['박재호(더불어민주당/朴在昊)', '김승남(더불어민주당/金承南)', '김윤덕(더불...  \n",
@@ -1062,7 +1062,7 @@
        "      <td>제21대 (2020~2024) 제381회</td>\n",
        "      <td>정부는 「노인복지법」 「장애인복지법」 등에 따라 65세 이상 노인 장애인 등에 대하...</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[['이은주(정의당/李恩周)',  '강민정(열린민주당/姜旼姃)',  '강은미(정의당...</td>\n",
+       "      <td>[['이은주(정의당/李恩周)',  '강민정(열린민주당/姜旼姃)',  '강은미(정의당...</td>\n",
        "      <td>[무소속, 정의당, 더불어민주당, 미래통합당, 열린민주당]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1081,7 +1081,7 @@
        "      <td>제21대 (2020~2024) 제381회</td>\n",
        "      <td>정부는 「노인복지법」 「장애인복지법」 등에 따라 65세 이상 노인 장애인 등에 대하...</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[['이은주(정의당/李恩周)',  '강민정(열린민주당/姜旼姃)',  '강은미(정의당...</td>\n",
+       "      <td>[['이은주(정의당/李恩周)',  '강민정(열린민주당/姜旼姃)',  '강은미(정의당...</td>\n",
        "      <td>[무소속, 정의당, 더불어민주당, 미래통합당, 열린민주당]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1100,7 +1100,7 @@
        "      <td>제21대 (2020~2024) 제381회</td>\n",
        "      <td>최근 코로나19 바이러스의 확산에 따라 외출 자제 및 재택근무 권고  학교 개학 연...</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[['이은주(정의당/李恩周)',  '강민정(열린민주당/姜旼姃)',  '강은미(정의당...</td>\n",
+       "      <td>[['이은주(정의당/李恩周)',  '강민정(열린민주당/姜旼姃)',  '강은미(정의당...</td>\n",
        "      <td>[무소속, 정의당, 더불어민주당, 미래통합당, 열린민주당]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1138,7 +1138,7 @@
        "      <td>제21대 (2020~2024) 제378회</td>\n",
        "      <td>전대미문의 코로나 19 감염병의 장기간 창궐로 대학들은 감염병 예방을 위해 온라인 ...</td>\n",
        "      <td>교육위원회</td>\n",
-       "      <td>[['이종배(미래통합당/李鍾培)',  '강기윤(미래통합당/姜起潤)',  '강대식(미...</td>\n",
+       "      <td>[['이종배(미래통합당/李鍾培)',  '강기윤(미래통합당/姜起潤)',  '강대식(미...</td>\n",
        "      <td>[미래통합당]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1157,7 +1157,7 @@
        "      <td>제21대 (2020~2024) 제378회</td>\n",
        "      <td>현행법에 따르면 감염병 확산방지를 위한 격리시설의 설치 운영  감염병 환자를 진료한...</td>\n",
        "      <td>보건복지위원회</td>\n",
-       "      <td>[['이종배(미래통합당/李鍾培)',  '강기윤(미래통합당/姜起潤)',  '강대식(미...</td>\n",
+       "      <td>[['이종배(미래통합당/李鍾培)',  '강기윤(미래통합당/姜起潤)',  '강대식(미...</td>\n",
        "      <td>[미래통합당]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1278,12 +1278,12 @@
        "                                                    제안자  \\\n",
        "0     [['박재호(더불어민주당/朴在昊)',  '김경협(더불어민주당/金炅俠)',  '김정호...   \n",
        "1     [['황운하(더불어민주당/黃雲夏)',  '김경만(더불어민주당/金京萬)',  '김경협...   \n",
-       "2     [['이은주(정의당/李恩周)',  '강민정(열린민주당/姜旼姃)',  '강은미(정의당...   \n",
-       "3     [['이은주(정의당/李恩周)',  '강민정(열린민주당/姜旼姃)',  '강은미(정의당...   \n",
-       "4     [['이은주(정의당/李恩周)',  '강민정(열린민주당/姜旼姃)',  '강은미(정의당...   \n",
+       "2     [['이은주(정의당/李恩周)',  '강민정(열린민주당/姜旼姃)',  '강은미(정의당...   \n",
+       "3     [['이은주(정의당/李恩周)',  '강민정(열린민주당/姜旼姃)',  '강은미(정의당...   \n",
+       "4     [['이은주(정의당/李恩周)',  '강민정(열린민주당/姜旼姃)',  '강은미(정의당...   \n",
        "...                                                 ...   \n",
-       "3986  [['이종배(미래통합당/李鍾培)',  '강기윤(미래통합당/姜起潤)',  '강대식(미...   \n",
-       "3987  [['이종배(미래통합당/李鍾培)',  '강기윤(미래통합당/姜起潤)',  '강대식(미...   \n",
+       "3986  [['이종배(미래통합당/李鍾培)',  '강기윤(미래통합당/姜起潤)',  '강대식(미...   \n",
+       "3987  [['이종배(미래통합당/李鍾培)',  '강기윤(미래통합당/姜起潤)',  '강대식(미...   \n",
        "3988  [['장제원(미래통합당/張濟元)',  '권성동(무소속/權性東)',  '김정재(미래통...   \n",
        "3989  [['신현영(더불어민주당/申賢榮)',  '고용진(더불어민주당/高榕禛)',  '김경만...   \n",
        "3990  [['박광온(더불어민주당/朴洸瑥)',  '강병원(더불어민주당/姜炳遠)',  '권칠승...   \n",
@@ -3733,7 +3733,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
