--- a/pending-bill-analysis-haram.ipynb
+++ b/pending-bill-analysis-haram.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
        "(23684, 10)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -119,7 +119,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,10 +259,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 97.6 ms, sys: 2.27 ms, total: 99.9 ms\n",
-      "Wall time: 125 ms\n",
-      "CPU times: user 1.2 s, sys: 33.4 ms, total: 1.24 s\n",
-      "Wall time: 1.36 s\n"
+      "CPU times: user 76.3 ms, sys: 1.84 ms, total: 78.2 ms\n",
+      "Wall time: 77.7 ms\n",
+      "CPU times: user 1.03 s, sys: 8.2 ms, total: 1.04 s\n",
+      "Wall time: 1.04 s\n"
      ]
     }
    ],
@@ -1688,6 +1688,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# !apt-get update \n",
+    "# !apt-get install g++ openjdk-8-jdk python-dev python3-dev \n",
+    "# !pip3 install JPype1-py3 \n",
+    "# !pip3 install konlpy \n",
+    "# !JAVA_HOME=\"C:\\Program Files\\Java\\jdk-13.0.2\"\n",
+    "# !pip3 install nltk\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unable to locate an executable at \"/Library/Java/JavaVirtualMachines/jdk-14.0.1.jdk/Contents/Home/bin/apt\" (-1)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 한글폰트 설정\n",
+    "import matplotlib as mpl\n",
+    "import matplotlib.pyplot as plt\n",
+    " \n",
+    "%config InlineBackend.figure_format = 'retina'\n",
+    " \n",
+    "!apt -qq -y install fonts-nanum\n",
+    " \n",
+    "import matplotlib.font_manager as fm\n",
+    "fontpath = '/usr/share/fonts/truetype/nanum/NanumBarunGothic.ttf'\n",
+    "font = fm.FontProperties(fname=fontpath, size=9)\n",
+    "plt.rc('font', family='NanumBarunGothic') \n",
+    "mpl.font_manager._rebuild()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "comm_df.loc[comm_df['소관위원회'].isin(basic_comm), '위원회 분류'] = '상임위원회'\n",
     "comm_df.loc[comm_df['소관위원회'].isin(special_comm), '위원회 분류'] = '특별위원회'"
    ]
@@ -1701,7 +1745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1819,7 +1863,7 @@
        "2       0     공포  상임위원회  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1831,7 +1875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1861,7 +1905,7 @@
        "Name: 소관위원회, dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1872,14 +1916,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-36-4d774aa0361d>:1: SettingWithCopyWarning: \n",
+      "<ipython-input-38-4d774aa0361d>:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1894,7 +1938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1926,7 +1970,7 @@
     }
    ],
    "source": [
-    "comm_anal1 = comm_df1[['소관위원회','의결결과','법률반영여부','의결처리기간','의안명+제안이유']]\n",
+    "comm_anal1 = comm_df1[['소관위원회','의결결과','법률공포여부','의결처리기간','의안명+제안이유']]\n",
     "\n",
     "for index, com in enumerate(basic_comm): \n",
     "    print(index, com)"
@@ -1936,17 +1980,207 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### [0] 법제사법위원회"
+    "#### [0] 법제사법위원회\n",
+    "\n",
+    "법제사법위원회(法制司法委員會)는 법제·사법에 관한 국회의 의사결정기능을 실질적으로 수행하는 국회 상임위원회이다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1818, 5)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "com1 = comm_anal1[comm_anal1['소관위원회'] == basic_comm[0]]\n",
+    "com1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "미공포    1667\n",
+       "공포      151\n",
+       "Name: 법률공포여부, dtype: int64"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "com1['법률공포여부'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "com1 = comm_anal1[comm_anal1['소관위원회'] == basic_comm[0]].reset_index()"
+    "# 공포/미공포 분류\n",
+    "com1_pro = com1[com1['법률공포여부'] == '공포'].reset_index()\n",
+    "com1_unpro = com1[com1['법률공포여부'] == '미공포'].reset_index()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>소관위원회</th>\n",
+       "      <th>의결결과</th>\n",
+       "      <th>법률공포여부</th>\n",
+       "      <th>의결처리기간</th>\n",
+       "      <th>의안명+제안이유</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>59</td>\n",
+       "      <td>법제사법위원회</td>\n",
+       "      <td>원안가결</td>\n",
+       "      <td>공포</td>\n",
+       "      <td>0</td>\n",
+       "      <td>군사법원법 일부개정법률안 군인 군무원 등 사이에 발생한 범죄의 피해자에게 변호사가 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>61</td>\n",
+       "      <td>법제사법위원회</td>\n",
+       "      <td>원안가결</td>\n",
+       "      <td>공포</td>\n",
+       "      <td>0</td>\n",
+       "      <td>출입국관리법 일부개정법률안 가  출입국 전 과정에서 지문  얼굴을 비롯하여 홍채  ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>62</td>\n",
+       "      <td>법제사법위원회</td>\n",
+       "      <td>원안가결</td>\n",
+       "      <td>공포</td>\n",
+       "      <td>0</td>\n",
+       "      <td>주택임대차보호법 일부개정법률안 현행법은 임대인은 임대차기간 종료 개월 전부터 개월 ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index    소관위원회  의결결과 법률공포여부  의결처리기간  \\\n",
+       "0     59  법제사법위원회  원안가결     공포       0   \n",
+       "1     61  법제사법위원회  원안가결     공포       0   \n",
+       "2     62  법제사법위원회  원안가결     공포       0   \n",
+       "\n",
+       "                                            의안명+제안이유  \n",
+       "0  군사법원법 일부개정법률안 군인 군무원 등 사이에 발생한 범죄의 피해자에게 변호사가 ...  \n",
+       "1  출입국관리법 일부개정법률안 가  출입국 전 과정에서 지문  얼굴을 비롯하여 홍채  ...  \n",
+       "2  주택임대차보호법 일부개정법률안 현행법은 임대인은 임대차기간 종료 개월 전부터 개월 ...  "
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "com1_pro.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk \n",
+    "from konlpy.tag import Okt\n",
+    "\n",
+    "stopwords = ['을','이','의','를','에','가','들','은','는','으로','한','도',\n",
+    "              '수','에서','로','것','그','과','제','입니다','할','하고','적','하는',\n",
+    "              '합니다','와','에게','고','인','하여','등','저','있습니다','말','까지',\n",
+    "              '그리고','다','만','했습니다','안','된','못','일','더','위',\n",
+    "              '있는','해','또한','명','하지','정말','물','많은','것임',\n",
+    "              '중','게','너무','자','이런','때','되지','위해','에는','없는',\n",
+    "              '및','요','때문','관련','대한','전','라고','되었습니다','하기','나','후','같은','해서',\n",
+    "              '글','되어','주','차','하','내','없이','대해','잘','항','조','경우','함안','기간','하려는','일부',\n",
+    "             '마련','있도록','또는','함','하도록','개월','부터','제호','관','되고','년','월']\n",
+    "\n",
+    "# 토큰화 해주기 \n",
+    "def tokenize(textlist): \n",
+    "    okt = Okt()\n",
+    "    nounlist = []\n",
+    "    for i in range(len(textlist)): \n",
+    "        nounlist.append(okt.nouns(i))\n",
+    "    return nounlist \n",
+    "\n",
+    "# 의미없는 단어 삭제 \n",
+    "def rem_useless(nounlist, stopwords): \n",
+    "    cleanlist = []\n",
+    "    removedict = []\n",
+    "    for i in nounlist: \n",
+    "        if (i not in removedict) and (i not in stopword_list) and (len(i) > 1):\n",
+    "            cleanlist.append(i) \n",
+    "    return cleanlist \n",
+    "\n",
+    "def preproc(textlist): \n",
+    "    nounlist = tokenize(textlist)\n",
+    "    cleanlist = rem_useless(nounlist, stopwords)\n",
+    "    return cleanlist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
