--- a/pending-bill-analysis-haram.ipynb
+++ b/pending-bill-analysis-haram.ipynb
@@ -259,10 +259,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 76.3 ms, sys: 1.84 ms, total: 78.2 ms\n",
-      "Wall time: 77.7 ms\n",
-      "CPU times: user 1.03 s, sys: 8.2 ms, total: 1.04 s\n",
-      "Wall time: 1.04 s\n"
+      "CPU times: user 91.1 ms, sys: 1.7 ms, total: 92.8 ms\n",
+      "Wall time: 93.8 ms\n",
+      "CPU times: user 1.23 s, sys: 13.5 ms, total: 1.25 s\n",
+      "Wall time: 1.25 s\n"
      ]
     }
    ],
@@ -1686,15 +1686,45 @@
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zsh:1: command not found: apt-get\n",
+      "zsh:1: command not found: apt-get\n",
+      "Requirement already satisfied: JPype1-py3 in /usr/local/lib/python3.8/site-packages (0.5.5.4)\n",
+      "Requirement already satisfied: konlpy in /usr/local/lib/python3.8/site-packages (0.5.2)\n",
+      "Requirement already satisfied: tweepy>=3.7.0 in /usr/local/lib/python3.8/site-packages (from konlpy) (3.9.0)\n",
+      "Requirement already satisfied: numpy>=1.6 in /usr/local/lib/python3.8/site-packages (from konlpy) (1.19.1)\n",
+      "Requirement already satisfied: JPype1>=0.7.0 in /usr/local/lib/python3.8/site-packages (from konlpy) (1.0.2)\n",
+      "Requirement already satisfied: lxml>=4.1.0 in /usr/local/lib/python3.8/site-packages (from konlpy) (4.5.2)\n",
+      "Requirement already satisfied: beautifulsoup4==4.6.0 in /usr/local/lib/python3.8/site-packages (from konlpy) (4.6.0)\n",
+      "Requirement already satisfied: colorama in /usr/local/lib/python3.8/site-packages (from konlpy) (0.4.3)\n",
+      "Requirement already satisfied: requests[socks]>=2.11.1 in /usr/local/lib/python3.8/site-packages (from tweepy>=3.7.0->konlpy) (2.24.0)\n",
+      "Requirement already satisfied: requests-oauthlib>=0.7.0 in /usr/local/lib/python3.8/site-packages (from tweepy>=3.7.0->konlpy) (1.3.0)\n",
+      "Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python3.8/site-packages (from tweepy>=3.7.0->konlpy) (1.15.0)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.8/site-packages (from requests[socks]>=2.11.1->tweepy>=3.7.0->konlpy) (2.10)\n",
+      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.8/site-packages (from requests[socks]>=2.11.1->tweepy>=3.7.0->konlpy) (1.25.10)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.8/site-packages (from requests[socks]>=2.11.1->tweepy>=3.7.0->konlpy) (2020.6.20)\n",
+      "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.8/site-packages (from requests[socks]>=2.11.1->tweepy>=3.7.0->konlpy) (3.0.4)\n",
+      "Requirement already satisfied: PySocks!=1.5.7,>=1.5.6; extra == \"socks\" in /usr/local/lib/python3.8/site-packages (from requests[socks]>=2.11.1->tweepy>=3.7.0->konlpy) (1.7.1)\n",
+      "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.8/site-packages (from requests-oauthlib>=0.7.0->tweepy>=3.7.0->konlpy) (3.1.0)\n",
+      "Requirement already satisfied: nltk in /usr/local/lib/python3.8/site-packages (3.5)\n",
+      "Requirement already satisfied: joblib in /usr/local/lib/python3.8/site-packages (from nltk) (0.16.0)\n",
+      "Requirement already satisfied: tqdm in /usr/local/lib/python3.8/site-packages (from nltk) (4.48.2)\n",
+      "Requirement already satisfied: regex in /usr/local/lib/python3.8/site-packages (from nltk) (2020.7.14)\n",
+      "Requirement already satisfied: click in /usr/local/lib/python3.8/site-packages (from nltk) (7.1.2)\n"
+     ]
+    }
+   ],
    "source": [
     "# !apt-get update \n",
     "# !apt-get install g++ openjdk-8-jdk python-dev python3-dev \n",
     "# !pip3 install JPype1-py3 \n",
     "# !pip3 install konlpy \n",
     "# !JAVA_HOME=\"C:\\Program Files\\Java\\jdk-13.0.2\"\n",
-    "# !pip3 install nltk\n",
-    "\n"
+    "# !pip3 install nltk"
    ]
   },
   {
@@ -2149,8 +2179,10 @@
     "def tokenize(textlist): \n",
     "    okt = Okt()\n",
     "    nounlist = []\n",
-    "    for i in range(len(textlist)): \n",
-    "        nounlist.append(okt.nouns(i))\n",
+    "    for i in range(len(textlist)):\n",
+    "        n = re.sub('[-=.#/:$}·,■?]','',textlist[i])\n",
+    "        k = re.sub('[0-9]','',n)\n",
+    "        nounlist.append(kkma.nouns(k))\n",
     "    return nounlist \n",
     "\n",
     "# 의미없는 단어 삭제 \n",
@@ -2170,10 +2202,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "No matching overloads found for kr.lucypark.okt.OktInterface.tokenize(int,java.lang.Boolean,java.lang.Boolean), options are:\n\tpublic java.util.List kr.lucypark.okt.OktInterface.tokenize(java.lang.String,java.lang.Boolean,java.lang.Boolean)\n\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-53-58730bf001fe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlaw_pro_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpreproc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcom1_pro\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'의안명+제안이유'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-44-e50909372252>\u001b[0m in \u001b[0;36mpreproc\u001b[0;34m(textlist)\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mpreproc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtextlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m     \u001b[0mnounlist\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtokenize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtextlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m     \u001b[0mcleanlist\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrem_useless\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnounlist\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstopwords\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mcleanlist\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-44-e50909372252>\u001b[0m in \u001b[0;36mtokenize\u001b[0;34m(textlist)\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0mnounlist\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtextlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m         \u001b[0mnounlist\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mokt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnouns\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mnounlist\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.8/site-packages/konlpy/tag/_okt.py\u001b[0m in \u001b[0;36mnouns\u001b[0;34m(self, phrase)\u001b[0m\n\u001b[1;32m     70\u001b[0m         \u001b[0;34m\"\"\"Noun extractor.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     71\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 72\u001b[0;31m         \u001b[0mtagged\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpos\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mphrase\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     73\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0ms\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtagged\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mt\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'Noun'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.8/site-packages/konlpy/tag/_okt.py\u001b[0m in \u001b[0;36mpos\u001b[0;34m(self, phrase, norm, stem, join)\u001b[0m\n\u001b[1;32m     58\u001b[0m         \"\"\"\n\u001b[1;32m     59\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 60\u001b[0;31m         tokens = self.jki.tokenize(\n\u001b[0m\u001b[1;32m     61\u001b[0m                     \u001b[0mphrase\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     62\u001b[0m                     \u001b[0mjpype\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjava\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlang\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mBoolean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnorm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: No matching overloads found for kr.lucypark.okt.OktInterface.tokenize(int,java.lang.Boolean,java.lang.Boolean), options are:\n\tpublic java.util.List kr.lucypark.okt.OktInterface.tokenize(java.lang.String,java.lang.Boolean,java.lang.Boolean)\n\n"
+     ]
+    }
+   ],
+   "source": [
+    "law_pro_list = preproc(com1_pro['의안명+제안이유'].tolist())\n"
+   ]
   },
   {
    "cell_type": "code",
