--- a/gender-bill-analysis-haram.ipynb
+++ b/gender-bill-analysis-haram.ipynb
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -464,21 +464,13 @@
        " '시대전환']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "partylist = []\n",
-    "\n",
-    "for i in range(len(bill_df)): \n",
-    "    for j in range(len(bill_df['제안정당'][i])): \n",
-    "        party = bill_df['제안정당'][i][j]\n",
-    "        if party not in partylist:\n",
-    "            partylist.append(bill_df['제안정당'][i][j]) \n",
-    "            \n",
-    "partylist"
+    "get_party(bill_df)"
    ]
   },
   {
@@ -2451,6 +2443,8 @@
    "source": [
     "## 젠더 폭력 분야 법안 분석\n",
     "\n",
+    "- 시간대별 법안 발의 분석도 함께!\n",
+    "\n",
     "### 젠더 폭력 의안 전처리 "
    ]
   },
@@ -2474,7 +2468,7 @@
     "# 일일이 다 보고 확인해봐야 함..ㅜㅜ - 확인안했음 \n",
     "keyword = r'.*(N번방|n번방|불법촬영|스토킹|데이트폭력|데이트 폭력|디지털성범죄|사이버범죄|포르노|\\\n",
     "                카르텔|과다노출|사이버 범죄|몰래카메라|몰카|불법 촬영|몸캠|성폭력|성착취|성매매|\\\n",
-    "                버닝썬|성희롱|딥페이크ㄷ|복제물|음란|성범죄|n번방|웹하드|촬영물|클럽|성접대|미투|그루밍).*'\n",
+    "                버닝썬|성희롱|딥페이크|복제물|음란|성범죄|n번방|웹하드|촬영물|클럽|성접대|미투|그루밍).*'\n",
     "gender = bill_df[bill_df['의안명'].str.match(keyword) |\n",
     "           bill_df['제안이유'].str.match(keyword, flags=re.MULTILINE)]\n",
     "gender = gender.reset_index()\n",
@@ -3406,6 +3400,13 @@
     "           bill_df['제안이유'].str.match(keyword, flags=re.MULTILINE)]\n",
     "deepFake.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
