--- a/environment-bill-analysis/Gensim_21st YJ.ipynb
+++ b/environment-bill-analysis/Gensim_21st YJ.ipynb
@@ -108,7 +108,7 @@
        "      <td>제21대 (2020~2024) 제381회</td>\n",
        "      <td>['제안이유 및 주요내용정부는 「노인복지법」,「장애인복지법」 등에 따라 65세 이상...</td>\n",
        "      <td>[]</td>\n",
-       "      <td>['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...</td>\n",
+       "      <td>['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -124,7 +124,7 @@
        "      <td>제21대 (2020~2024) 제381회</td>\n",
        "      <td>['제안이유정부는 「노인복지법」,「장애인복지법」 등에 따라 65세 이상 노인·장애인...</td>\n",
        "      <td>[]</td>\n",
-       "      <td>['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...</td>\n",
+       "      <td>['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -140,7 +140,7 @@
        "      <td>제21대 (2020~2024) 제381회</td>\n",
        "      <td>['제안이유최근 코로나19 바이러스의 확산에 따라 외출 자제 및 재택근무 권고, 학...</td>\n",
        "      <td>[]</td>\n",
-       "      <td>['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...</td>\n",
+       "      <td>['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -171,9 +171,9 @@
        "                                                 제안자  \n",
        "0  ['박재호(더불어민주당/朴在昊)', '김경협(더불어민주당/金炅俠)', '김정호(더불...  \n",
        "1  ['황운하(더불어민주당/黃雲夏)', '김경만(더불어민주당/金京萬)', '김경협(더불...  \n",
-       "2  ['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...  \n",
-       "3  ['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...  \n",
-       "4  ['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...  "
+       "2  ['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...  \n",
+       "3  ['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...  \n",
+       "4  ['이은주(정의당/李恩周)', '강민정(열린민주당/姜旼姃)', '강은미(정의당/姜恩...  "
       ]
      },
      "execution_count": 2,
@@ -182,7 +182,7 @@
     }
    ],
    "source": [
-    "BillDf = pd.read_csv(\"./21대 국회 의안정보 new.csv\", encoding='utf-8-sig') #200824업데이트\n",
+    "BillDf = pd.read_csv(\"./21대 국회 의안정보 new.csv\", encoding='utf-8-sig') #200824업데이트\n",
     "BillDf.head()"
    ]
   },
@@ -398,7 +398,7 @@
        "      <td>제21대 (2020~2024) 제381회</td>\n",
        "      <td>현행 집회 및 시위에 관한 법률에는 헌법재판소의 결정에 따라 해산된 정당의 목적을 ...</td>\n",
        "      <td>행정안전위원회</td>\n",
-       "      <td>[['이원욱(더불어민주당/李元旭)',  '강병원(더불어민주당/姜炳遠)',  '김민기...</td>\n",
+       "      <td>[['이원욱(더불어민주당/李元旭)',  '강병원(더불어민주당/姜炳遠)',  '김민기...</td>\n",
        "      <td>1.0</td>\n",
        "      <td>[더불어민주당]</td>\n",
        "      <td>NaN</td>\n",
@@ -417,7 +417,7 @@
        "      <td>제21대 (2020~2024) 제381회</td>\n",
        "      <td>현행 「행정소송법」은 행정청의 처분에 대한 집행정지 신청사건에 있어서 공공복리에 중...</td>\n",
        "      <td>법제사법위원회</td>\n",
-       "      <td>[['이원욱(더불어민주당/李元旭)',  '강병원(더불어민주당/姜炳遠)',  '김민기...</td>\n",
+       "      <td>[['이원욱(더불어민주당/李元旭)',  '강병원(더불어민주당/姜炳遠)',  '김민기...</td>\n",
        "      <td>1.0</td>\n",
        "      <td>[더불어민주당]</td>\n",
        "      <td>NaN</td>\n",
@@ -436,7 +436,7 @@
        "      <td>제21대 (2020~2024) 제381회</td>\n",
        "      <td>현행법은 「형법」상 각종 범죄  밀수출입죄 등 다양한 유형의 중대범죄에 관하여 범죄...</td>\n",
        "      <td>법제사법위원회</td>\n",
-       "      <td>[['이수진(더불어민주당/李秀眞)',  '강선우(더불어민주당/姜仙祐)',  '강준현...</td>\n",
+       "      <td>[['이수진(더불어민주당/李秀眞)',  '강선우(더불어민주당/姜仙祐)',  '강준현...</td>\n",
        "      <td>1.0</td>\n",
        "      <td>[무소속, 더불어민주당]</td>\n",
        "      <td>NaN</td>\n",
@@ -506,9 +506,9 @@
        "4  「대한민국헌법」 제12조제4항에 따라 피의자도 변호인의 조력을 받을 권리가 있고  ...  법제사법위원회   \n",
        "\n",
        "                                                 제안자  법률안  \\\n",
-       "0  [['이원욱(더불어민주당/李元旭)',  '강병원(더불어민주당/姜炳遠)',  '김민기...  1.0   \n",
-       "1  [['이원욱(더불어민주당/李元旭)',  '강병원(더불어민주당/姜炳遠)',  '김민기...  1.0   \n",
-       "2  [['이수진(더불어민주당/李秀眞)',  '강선우(더불어민주당/姜仙祐)',  '강준현...  1.0   \n",
+       "0  [['이원욱(더불어민주당/李元旭)',  '강병원(더불어민주당/姜炳遠)',  '김민기...  1.0   \n",
+       "1  [['이원욱(더불어민주당/李元旭)',  '강병원(더불어민주당/姜炳遠)',  '김민기...  1.0   \n",
+       "2  [['이수진(더불어민주당/李秀眞)',  '강선우(더불어민주당/姜仙祐)',  '강준현...  1.0   \n",
        "3  [['박재호(더불어민주당/朴在昊)',  '김승남(더불어민주당/金承南)',  '김윤덕...  1.0   \n",
        "4  [['김남국(더불어민주당/金南局)',  '고영인(더불어민주당/高永寅)',  '권칠승...  1.0   \n",
        "\n",
@@ -54235,7 +54235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
